orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/CRM_Product__c/CRM_Product__c.object-meta.xml
<CustomObject>
    <description>BlackRoad CRM Products/Solutions (Financial Advisor CRM, etc.)</description>
    <label>CRM Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CRM Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>