orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/CRM_Product__c/fields/Flows_Included__c.field-meta.xml
<CustomField>
    <fullName>Flows_Included__c</fullName>
    <label>Flows Included</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>