orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/CRM_Product__c/fields/Objects_Included__c.field-meta.xml
<CustomField>
    <fullName>Objects_Included__c</fullName>
    <label>Objects Included</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Client Household</fullName><default>false</default><label>Client Household</label></value>
            <value><fullName>Distribution Request</fullName><default>false</default><label>Distribution Request</label></value>
            <value><fullName>Mortality Event</fullName><default>false</default><label>Mortality Event</label></value>
            <value><fullName>Liquidity Event</fullName><default>false</default><label>Liquidity Event</label></value>
            <value><fullName>Compliance Log</fullName><default>false</default><label>Compliance Log</label></value>
            <value><fullName>Document Request</fullName><default>false</default><label>Document Request</label></value>
            <value><fullName>Meeting</fullName><default>false</default><label>Meeting</label></value>
            <value><fullName>Financial Account</fullName><default>false</default><label>Financial Account</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>