orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/CRM_Product__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <label>Product Code</label>
    <type>Text</type>
    <length>50</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>