orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/CRM_Product__c/fields/Target_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Target_Vertical__c</fullName>
    <label>Target Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Financial Services</fullName><default>true</default><label>Financial Services</label></value>
            <value><fullName>Healthcare</fullName><default>false</default><label>Healthcare</label></value>
            <value><fullName>Real Estate</fullName><default>false</default><label>Real Estate</label></value>
            <value><fullName>Insurance</fullName><default>false</default><label>Insurance</label></value>
            <value><fullName>Legal</fullName><default>false</default><label>Legal</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>