orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/CRM_Product__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <type>Text</type>
    <length>20</length>
</CustomField>